--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "debug": "^3.1.0",
     "express": "^4.18.2",
     "joi": "^13.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.0",
     "nodemon": "^3.0.1",
     "pug": "^2.0.4",
